@@ -1,28 +1,10 @@
 {
-  "timestamp" : "2025-02-23T01:49:20Z",
-  "count_outdated" : 5049,
-  "uniques_outdated" : 973,
-  "count" : 5178,
-  "uniques" : 994,
+  "timestamp" : "2025-02-26T01:45:11Z",
+  "count_outdated" : 5052,
+  "uniques_outdated" : 976,
+  "count" : 5179,
+  "uniques" : 995,
   "views" : [
-    {
-      "timestamp": "2025-02-11T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 3 ]
-    },
-    {
-      "timestamp": "2025-02-12T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-02-14T00:00:00Z",
       "count": 3,
@@ -88,6 +70,15 @@
     },
     {
       "timestamp": "2025-02-22T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-02-25T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
