@@ -1,17 +1,7 @@
 {
-  "count": 129,
-  "uniques": 20,
+  "count": 127,
+  "uniques": 18,
   "views": [
-    {
-      "timestamp": "2025-02-11T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
-    {
-      "timestamp": "2025-02-12T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-02-14T00:00:00Z",
       "count": 3,
@@ -49,6 +39,11 @@
     },
     {
       "timestamp": "2025-02-22T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-02-25T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
